# actix-todo

./: .env  .gitignore  Cargo.toml  README.md  test.db
migrations/2019-12-03-084204_create_event/: up.sql
src/: api.rs  main.rs  models.rs  schema.rs
static/: index.html  script.js
